[tool.poetry]
name = "hw-4"
version = "0.1.0"
description = ""
authors = ["chabanchuk <145770156+chabanchuk@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
